--- a/docs/gravitino-metadata-manage.mdx
+++ b/docs/gravitino-metadata-manage.mdx
@@ -40,7 +40,7 @@ like metalakes, catalogs, schemas, and tables. The following contents are includ
 
 In this document, Gravitino would use Apache Hive catalog as an example to show how to manage Gravitino metadata. Other Catalogs are similar to Hive catalog.
 
-Assuming Gravitino has just started, and the host and post is `http://localhost:8090`.
+Assuming Gravitino has just started, and the host and port is `http://localhost:8090`.
 
 ## Metalake operations
 
