Update doc again

--- a/docs/manage-metadata-using-gravitino.mdx
+++ b/docs/manage-metadata-using-gravitino.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Gravitino metadata manage"
-slug: /gravitino-metadata-manage
+title: "Manage metadata using Gravitino"
+slug: /manage-metadata-using-gravitino
 date: 2023-12-10
 keyword: metadata manage 
 license: Copyright 2023 Datastrato Pvt Ltd. This software is licensed under the Apache License version 2.
@@ -10,7 +10,7 @@ license: Copyright 2023 Datastrato Pvt Ltd. This software is licensed under the 
 
 [//]: # (import TabItem from "@theme/TabItem";)
 
-This page introduces how to manage catalog metadata by Gravitino. Through Gravitino, you can create, edit, and delete metadata
+This page introduces how to manage metadata by Gravitino. Through Gravitino, you can create, edit, and delete metadata
 like metalakes, catalogs, schemas, and tables. The following contents are included in this page:
 
 - [**Metalake operations**](#metalake-operations)
